// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectScreenHandler getTeamsMessage should match snapshot when there are more than one events 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**2 screens** are added to _projectName_! 🗞",
  "sections": [
    {
      "images": [
        {
          "image": "http://placehold.it/200",
          "title": "Section Image"
        },
        {
          "image": "http://placehold.it/200",
          "title": "Section Image"
        }
      ]
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fproject%3Fpid%3DprojectId%26sids%3DscreenId%2CscreenId2"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/project/projectId?sid=screenId&sid=screenId2"
        }
      ]
    }
  ]
}
`;

exports[`projectScreenHandler getTeamsMessage should match snapshot when there is only one event 1`] = `
{
  "@type": "MessageCard",
  "@context": "https://schema.org/extensions",
  "text": "**screenName** is added to _projectName_! 🗞",
  "sections": [
    {
      "images": [
        {
          "image": "http://placehold.it/200",
          "title": "Section Image"
        }
      ]
    }
  ],
  "potentialAction": [
    {
      "@type": "OpenUri",
      "name": "Open in App",
      "targets": [
        {
          "os": "default",
          "uri": "https://msteams-app.zeplin.io/api/app-redirect?uri=zpl%3A%2F%2Fscreen%3Fpid%3DprojectId%26sid%3DscreenId"
        }
      ]
    },
    {
      "@type": "OpenUri",
      "name": "Open in Web",
      "targets": [
        {
          "os": "default",
          "uri": "https://app.zeplin.io/project/projectId/screen/screenId"
        }
      ]
    }
  ]
}
`;
